Fix styling on mobile

--- a/static/css/pages/whitepaper.css
+++ b/static/css/pages/whitepaper.css
@@ -73,6 +73,7 @@ main section.whitepaper-container h1, main section.whitepaper-container h2 {
 
 .whitepaper-content p {
   margin-bottom: 1rem;
+  word-break: break-word;
 }
 
 .whitepaper-content h2 {
